--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,15 @@ code {
   justify-content: space-evenly;
   align-items: flex-start;
 }
+
+.dashboard {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.card {
+  border: 1px solid #000;
+  border-radius: 5px;
+  width: 250px;
+}
