--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,21 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.8em;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1,
+h2,
+h3,
+h4,
+h5,
+.title {
+  font-family: 'Oswald', sans-serif;
+  font-size: 0.8em;
 }
 
+.App {
+  width: 100%;
+}
 
 .nav-link {
   padding-left: 0.5rem;
@@ -25,28 +29,60 @@ code {
   color: #FFFFFF;
 }
 
-.store {
-  display: flex;
-  flex-flow: row;
-  justify-content: space-evenly;
-  align-items: flex-start;
-}
-
 .dashboard {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   flex-direction: row;
-  width: 100%;
+  flex-wrap: wrap;
+  width: 412px;
 }
 
 .card {
-  padding: 16px 13px 16px 14px;
   border-radius: 10px;
-  border: solid 1px #141c3a;
   background-color: none;
   text-align: left;
-  width: 20%;
-  margin: 16px;
+  width: 185px;
+  height: auto;
+  margin: 5px;
+  box-shadow: 2px 2px 16px -5px rgba(0, 0, 0, 0.57);
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: flex-start;
+  box-shadow: 2px 2px 16px -5px rgba(0, 0, 0, 0.57);
+  width: 100%;
+}
+
+.left {
+  border-top: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+  border-left: 1px solid #dfdfdf;
+  border-radius: 100% 0px 0px 100%;
+  width: 10px;
+}
+
+.content {
+  border-top: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+  font-size: 0.7em;
+  width: 125px;
+}
+
+.title {
+  width: 40px;
+  padding-right: 5px;
+}
+
+.right {
+  width: 10px;
+  border-top: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
+  border-right: 1px solid #dfdfdf;
+  border-radius: 0px 100% 100% 0px;
 }
 
 .dashbutton {
