--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,6 @@ body {
   background: linear-gradient(90deg, #C7C5F4, #776BCC);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
 .title {
   font-family: 'Oswald', sans-serif;
   font-size: 0.8em;
@@ -55,14 +50,6 @@ h5,
   color: #FF0000;
   font-size: 4em;
   font-weight: bold;
-}
-
-.dashboard {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 412px;
 }
 
 .entry {
@@ -157,6 +144,7 @@ h5,
   z-index: 1;
   position: relative;
   height: 100%;
+
 }
 
 .screen__background {
@@ -248,16 +236,34 @@ h5,
 
 .login__submit {
   background: #fff;
-  font-size: 14px;
-  margin-top: 30px;
-  padding: 16px 20px;
+  font-size: 10px;
+  margin-top: 15px;
+  padding: 1px 20px;
   border-radius: 26px;
   border: 1px solid #D4D3E8;
   text-transform: uppercase;
   font-weight: 700;
   display: flex;
   align-items: center;
-  width: 100%;
+  width: 50%;
+  color: #4C489D;
+  box-shadow: 0px 2px 2px #5C5696;
+  cursor: pointer;
+  transition: .2s;
+}
+
+.login_register {
+  background: #fff;
+  font-size: 10px;
+  margin-top: 15px;
+  padding: 1px 20px;
+  border-radius: 26px;
+  border: 1px solid #D4D3E8;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  width: 50%;
   color: #4C489D;
   box-shadow: 0px 2px 2px #5C5696;
   cursor: pointer;
@@ -266,7 +272,10 @@ h5,
 
 .login__submit:active,
 .login__submit:focus,
-.login__submit:hover {
+.login__submit:hover,
+.login_register:active,
+.login_register:focus,
+.login_register:hover {
   border-color: #6A679E;
   outline: none;
 }
