--- a/src/index.css
+++ b/src/index.css
@@ -135,8 +135,8 @@ body {
 .screen {
   background: linear-gradient(90deg, #5D54A4, #7C78B8);
   position: relative;
-  height: 600px;
-  width: 360px;
+  height: 900px;
+  width: 400px;
   box-shadow: 0px 0px 24px #5C5696;
 }
 
@@ -176,8 +176,8 @@ body {
   height: 220px;
   width: 220px;
   background: #6C63AC;
-  top: -172px;
-  right: 0;
+  top: -110px;
+  right: -90px;
   border-radius: 32px;
 }
 
@@ -185,8 +185,8 @@ body {
   height: 540px;
   width: 190px;
   background: linear-gradient(270deg, #5D54A4, #6A679E);
-  top: -24px;
-  right: 0;
+  top: 320px;
+  right: 150px;
   border-radius: 32px;
 }
 
@@ -194,31 +194,33 @@ body {
   height: 400px;
   width: 200px;
   background: #7E7BB9;
-  top: 420px;
-  right: 50px;
+  top: 400px;
+  right: -150px;
   border-radius: 60px;
+
 }
 
 .screen__background__shape5 {
-  height: 620px;
-  width: 520px;
+  height: 950px;
+  width: 400px;
   background: #FFF;
-  transform: rotate(0deg);
+  right: 50px;
+  transform: rotate(5deg);
   border-radius: 0 72px 0 0;
 }
 
-.login {
-  width: 320px;
+.screen__content {
+  width: auto;
   padding: 30px;
-  padding-top: 156px;
+  padding-top: 10px;
 }
 
-.login__field {
-  padding: 20px 0px;
+.content__field {
+  padding: 10px 0px;
   position: relative;
 }
 
-.login__icon {
+.content__icon {
   position: absolute;
   top: 30px;
   color: #7875B5;
@@ -310,13 +312,13 @@ body {
   justify-content: center;
 }
 
-.social-login__icon {
+.social-content__icon {
   padding: 20px 10px;
   color: #fff;
   text-decoration: none;
   text-shadow: 0px 0px 8px #7875B5;
 }
 
-.social-login__icon:hover {
+.social-content__icon:hover {
   transform: scale(1.5);
 }
